# FitnessTrackingAid

./: .tmux.conf  CMakeLists.txt  Main.qml  dailymeals.cpp  dailymeals.h  daymanager.cpp  daymanager.h  dayofeating.cpp  dayofeating.h  fooditem.cpp  fooditem.h  foodsmanager.cpp  foodsmanager.h  main.cpp  mealitem.cpp  mealitem.h  mealsmanager.cpp  mealsmanager.h  userfitnessinfo.cpp  userfitnessinfo.h
Diet/: DietMainView.qml  DietPage.qml  FoodsPage.qml  MacrosPage.qml  StatsPage.qml
MyDialogs/: CreateFoodDialog.qml  CreateMealDialog.qml  EditFoodDialog.qml
PageElements/: DietDrawerContent.qml  DietNavBar.qml  TopBar.qml  WorkoutDrawerContent.qml  WorkoutNavBar.qml
Workout/: WorkoutMainView.qml  WorkoutPage.qml
nvvim/lua/: chadrc.lua
nvvim/lua/configs/: lspconfig.lua
nvvim/lua/plugins/: init.lua
